[build-system]
requires = ["setuptools >= 70", "build>=1.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lemur_ca_importer"
dynamic = ["version"]
authors = [
  { name = "Philippe Desmarais", email = "philippe.desmarais4@gmail.com" },
]
dependencies = ["lemur>=1.7.0", "flask>=2.3.0"]
description = "A plugin for Lemur that allows users to import existing CA certificates into the system."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/desmaraisp/lemur-ca-import"
Issues = "https://github.com/desmaraisp/lemur-ca-import/issues"


[project.entry-points."lemur.plugins"]
ca_importer = "lemur_ca_importer.plugin:CAImporterPlugin"


[project.optional-dependencies]
tests = [
    "pytest"
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning::",  # ignore deprecations from all modules
    "default::DeprecationWarning:mymodule.*:",  # except from our own code
]
