[project]
name = "lemur-plugins-workspace"
version = "0.0.1"
requires-python = ">=3.10"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "src/*"
]

[dependency-groups]
dev = [
    "pytest",
    "setuptools>=65.0.0"
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning::",  # ignore deprecations from all modules
    "default::DeprecationWarning:mymodule.*:",  # except from our own code
]
