[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[project]
name = "lemur-manual-issuer-plugin"
version = "0.0.1"
authors = [
  { name = "Philippe Desmarais", email = "philippe.desmarais4@gmail.com" },
]
dependencies = [
  "lemur>=1.7.0",
  "flask>=2.3.0",
  "lemur-plugin-utils"
]
description = "A plugin for Lemur that allows users to import existing CA certificates into the system."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/desmaraisp/lemur-plugins"
Issues = "https://github.com/desmaraisp/lemur-plugins/issues"


[project.entry-points."lemur.plugins"]
manual_issuer = "lemur_manual_issuer_plugin.plugin:ManualIssuerPlugin"


[tool.uv.sources]
lemur-plugin-utils = { workspace = true }
